--- a/orientacao-profissional/package.json
+++ b/orientacao-profissional/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "cd ../api-guia-profissoes && npm run dev",
+    "dev": "concurrently \"vite\" \"npm run start\" ",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
