--- a/api-guia-profissoes/package.json
+++ b/api-guia-profissoes/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
+    "start": "npm run dev",
     "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "keywords": [],
   "author": "Hygor Divino Ribeiro Teles",
